feature: Docking score featurizer added

--- a/notebooks/Example Pipeline.ipynb
+++ b/notebooks/Example Pipeline.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "sys.path.append('..')\n",
     "from sbap.sdf import ChemblSdfReader\n",
-    "from sbap.featurizers.prolif_smina import SminaDockingPersistenceHandler, SminaConfig, DockedProlifFingerprintFeaturizer"
+    "from sbap.featurizers.prolif_smina import SminaDockingPersistenceHandler, SminaConfig, DockedProlifFingerprintFeaturizer, SminaDockingScoreFeaturizer"
    ]
   },
   {
@@ -34,9 +34,10 @@
     "config = SminaConfig(\n",
     "    center_x=-62.461, center_y=-44.369, center_z=-21.255, size_x=30, size_y=30, size_z=30, exhaustiveness=8, \n",
     ")\n",
-    "featurizer = DockedProlifFingerprintFeaturizer.create(\n",
+    "fingerprint_featurizer = DockedProlifFingerprintFeaturizer.create(\n",
     "    logging_level=logging.INFO,\n",
-    ")"
+    ")\n",
+    "docking_score_featurizer = SminaDockingScoreFeaturizer(logging.INFO)"
    ]
   },
   {
@@ -48,7 +49,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c518cea7131b46229ba9e2d20742f039",
+       "model_id": "6dbf8696d1874be7a47a9cc8cd20daf2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -61,7 +62,7 @@
     }
    ],
    "source": [
-    "featurizer.fit(protein_pdb_file, docked_ligands_target_directory)"
+    "fingerprint_featurizer.fit(protein_pdb_file, docked_ligands_target_directory)"
    ]
   },
   {
@@ -73,7 +74,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0039457ff48444bc81cd867afa8ca307",
+       "model_id": "9e7ef622178e49ef826f83cc73296ad9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,7 +105,7 @@
     {
      "data": {
       "text/plain": [
-       "(5144, 272)"
+       "(5144, 136)"
       ]
      },
      "execution_count": 4,
@@ -113,37 +114,44 @@
     }
    ],
    "source": [
-    "X, y = featurizer.transform(protein_pdb_file, docked_ligands_target_directory)\n",
-    "X.shape"
+    "X_fp, y = fingerprint_featurizer.transform(protein_pdb_file, docked_ligands_target_directory)\n",
+    "X_fp.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "b2a97126",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)"
+    "X_fp_train, X_fp_test, X_fp_train, X_fp_test = train_test_split(X_fp, y, random_state=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "36b7801e",
+   "execution_count": null,
+   "id": "1434d44b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-2.799980977077869"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉                                                                  | 3461/5144 [21:19<10:16,  2.73it/s]"
+     ]
     }
    ],
+   "source": [
+    "docking_score_featurizer.featurize(protein_pdb_file, docked_ligands_target_directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36b7801e",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "regr = DecisionTreeRegressor(random_state=1).fit(X_train, y_train.astype('float'))\n",
     "regr.score(X_test, y_test.astype('float'))"
