--- a/notebooks/CYP2C8.ipynb
+++ b/notebooks/CYP2C8.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "f44bc485",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,17 @@
     "import pathlib\n",
     "import shutil\n",
     "import sys\n",
+    "import os\n",
     "logging.basicConfig()\n",
+    "\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
     "from matplotlib import pyplot as plt\n",
     "from tdc import Evaluator\n",
     "import numpy as np\n",
+    "\n",
+    "from rdkit import Chem\n",
+    "from rdkit.Chem import MACCSkeys\n",
     "\n",
     "sys.path.append('..')\n",
     "from sbap.sdf import ChemblSdfReader\n",
@@ -25,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "65d5cd98",
    "metadata": {},
    "outputs": [],
@@ -49,7 +54,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "237cda55c9a646909eb43863148f7566",
+       "model_id": "3f682e9a558a41c3b0dca743f0b7837c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 13,
    "id": "84205745",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1184f948a0a4298a72a7894832e4c99",
+       "model_id": "e3dff4ad305d445c9282295a34c4bd08",
        "version_major": 2,
        "version_minor": 0
       },
@@ -109,7 +114,7 @@
        "(742, 105)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,6 +122,259 @@
    "source": [
     "X, y = fingerprint_featurizer.transform(protein_pdb_file, docked_ligands_target_directory)\n",
     "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "41845daa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ -9.8 -10.2 -12.1  -9.1  -8.2  -8.9 -10.  -10.2  -9.5 -10.2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X[:10, 0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbf8c51a",
+   "metadata": {},
+   "source": [
+    "Well, this is definitely not elegant, but... I just want to verify quickly, ok?\n",
+    "Outline:\n",
+    "- read the contents of labels.csv\n",
+    "- calculate each ligand's MACCS\n",
+    "- concat X with this matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "c622bf1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****\n",
+      "\n",
+      "     RDKit          3D\n",
+      "\n",
+      "\n",
+      "\n",
+      " 27 30  0  0  0  0  0  0  0  0999 V2000\n",
+      "\n",
+      "   46.6844   13.3420  -22.6038 C   0  0  0  0  0  1  0  0  0  0  0  0\n",
+      "\n",
+      "   46.6990   13.1423  -24.0896 C   0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "\n",
+      "   45.9722   12.1015  -24.6555 C   0  0  0  0  0  3  0  0  0  0  0  0\n",
+      "\n",
+      "   45.9045   11.8480  -25.9799 N   0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "\n",
+      "   46.5829   12.6681  -26.8174 C   0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "\n",
+      "   47.3516   13.7239  -26.3308 C   0  0  0  0  0  3  0  0  0  0  0  0\n",
+      "\n",
+      "   47.4200   13.9772  -24.9555 C   0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "\n",
+      "   46.4666   12.3436  -28.2517 C   0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "\n",
+      "   46.8615   11.0780  -28.7318 C   0  0  0  0  0  3  0  0  0  0  0  0\n",
+      "\n",
+      "   46.7587   10.7532  -30.0865 C   0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "\n",
+      "   47.2590    9.2007  -30.6340 Cl  0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "\n",
+      "   46.2560   11.6763  -30.9991 C   0  0  0  0  0  3  0  0  0  0  0  0\n",
+      "\n",
+      "   45.8499   12.9299  -30.5492 C   0  0  0  0  0  3  0  0  0  0  0  0\n",
+      "\n",
+      "   45.9541   13.2506  -29.1942 C   0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "\n",
+      "   45.5257   14.4641  -28.8119 F   0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "\n",
+      "   48.1665   15.0588  -24.4303 N   0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "\n",
+      "   48.9984   14.7346  -23.9527 H   0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "\n",
+      "   48.1765   16.4155  -24.7826 C   0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "\n",
+      "   47.1631   17.3108  -24.4137 C   0  0  0  0  0  3  0  0  0  0  0  0\n",
+      "\n",
+      "   47.2355   18.6519  -24.7728 C   0  0  0  0  0  3  0  0  0  0  0  0\n",
+      "\n",
+      "   48.2371   19.2210  -25.4718 N   0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "\n",
+      "   49.2286   18.3657  -25.8124 C   0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "\n",
+      "   50.4280   18.5760  -26.5195 C   0  0  0  0  0  3  0  0  0  0  0  0\n",
+      "\n",
+      "   51.1476   17.4557  -26.6501 N   0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "\n",
+      "   50.3922   16.5335  -26.0235 N   0  0  0  0  0  4  0  0  0  0  0  0\n",
+      "\n",
+      "   49.2262   17.0145  -25.4899 C   0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "\n",
+      "   50.7346   15.5809  -26.0018 H   0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "\n",
+      "  1  2  1  0\n",
+      "\n",
+      "  2  3  4  0\n",
+      "\n",
+      "  3  4  4  0\n",
+      "\n",
+      "  4  5  4  0\n",
+      "\n",
+      "  5  8  1  0\n",
+      "\n",
+      "  8  9  4  0\n",
+      "\n",
+      "  9 10  4  0\n",
+      "\n",
+      " 10 11  1  0\n",
+      "\n",
+      " 10 12  4  0\n",
+      "\n",
+      " 12 13  4  0\n",
+      "\n",
+      " 13 14  4  0\n",
+      "\n",
+      "  8 14  4  0\n",
+      "\n",
+      " 14 15  1  0\n",
+      "\n",
+      "  5  6  4  0\n",
+      "\n",
+      "  6  7  4  0\n",
+      "\n",
+      "  2  7  4  0\n",
+      "\n",
+      "  7 16  1  0\n",
+      "\n",
+      " 16 18  1  0\n",
+      "\n",
+      " 18 19  4  0\n",
+      "\n",
+      " 19 20  4  0\n",
+      "\n",
+      " 20 21  4  0\n",
+      "\n",
+      " 21 22  4  0\n",
+      "\n",
+      " 22 23  4  0\n",
+      "\n",
+      " 23 24  4  0\n",
+      "\n",
+      " 24 25  4  0\n",
+      "\n",
+      " 25 26  4  0\n",
+      "\n",
+      " 18 26  4  0\n",
+      "\n",
+      " 22 26  4  0\n",
+      "\n",
+      " 16 17  1  0\n",
+      "\n",
+      " 25 27  1  0\n",
+      "\n",
+      "M  CHG  1  25   1\n",
+      "\n",
+      "M  END\n",
+      "\n",
+      "<class 'rdkit.Chem.rdchem.Mol'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[15:44:44] Can't kekulize mol.  Unkekulized atoms: 17 18 19 20 21 22 23 24 25\n"
+     ]
+    },
+    {
+     "ename": "KekulizeException",
+     "evalue": "Can't kekulize mol.  Unkekulized atoms: 17 18 19 20 21 22 23 24 25",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKekulizeException\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[37], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m mol \u001b[38;5;241m=\u001b[39m Chem\u001b[38;5;241m.\u001b[39mMolFromMolFile(filename, removeHs\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, sanitize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, strictParsing\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(mol))\n\u001b[0;32m----> 7\u001b[0m \u001b[43mChem\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mSanitizeMol\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmol\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m MACCSkeys\u001b[38;5;241m.\u001b[39mGenMACCSKeys(mol)\u001b[38;5;241m.\u001b[39mToBitString()\n",
+      "\u001b[0;31mKekulizeException\u001b[0m: Can't kekulize mol.  Unkekulized atoms: 17 18 19 20 21 22 23 24 25"
+     ]
+    }
+   ],
+   "source": [
+    "filename=os.path.join(docked_ligands_target_directory, '79a5c78c-e746-4f12-b7b2-194605833e34.mol')\n",
+    "with open(filename, 'r') as file:\n",
+    "    for line in file:\n",
+    "        print(line)\n",
+    "mol = Chem.MolFromMolFile(filename, removeHs=False, sanitize=False, strictParsing=False)\n",
+    "print(type(mol))\n",
+    "Chem.SanitizeMol(mol)\n",
+    "MACCSkeys.GenMACCSKeys(mol).ToBitString()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "356fffda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'rdkit.Chem.rdchem.Mol'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[15:40:57] \n",
+      "\n",
+      "****\n",
+      "Pre-condition Violation\n",
+      "RingInfo not initialized\n",
+      "Violation occurred on line 129 in file /home/conda/feedstock_root/build_artifacts/rdkit_1666697261712/work/Code/GraphMol/RingInfo.cpp\n",
+      "Failed Expression: df_init\n",
+      "****\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Pre-condition Violation\n\tRingInfo not initialized\n\tViolation occurred on line 129 in file Code/GraphMol/RingInfo.cpp\n\tFailed Expression: df_init\n\tRDKIT: 2022.09.1\n\tBOOST: 1_74\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m         mol \u001b[38;5;241m=\u001b[39m Chem\u001b[38;5;241m.\u001b[39mMolFromMolFile(filename, removeHs\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, sanitize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, strictParsing\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      8\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(mol))\n\u001b[0;32m----> 9\u001b[0m         X2\u001b[38;5;241m.\u001b[39mappend(\u001b[43mMACCSkeys\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGenMACCSKeys\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmol\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mToBitString())\n\u001b[1;32m     10\u001b[0m X2 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([np\u001b[38;5;241m.\u001b[39mfromstring(s,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mu1\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mord\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m X2])\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(X2)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Pre-condition Violation\n\tRingInfo not initialized\n\tViolation occurred on line 129 in file Code/GraphMol/RingInfo.cpp\n\tFailed Expression: df_init\n\tRDKIT: 2022.09.1\n\tBOOST: 1_74\n"
+     ]
+    }
+   ],
+   "source": [
+    "X2 = []\n",
+    "\n",
+    "with open(os.path.join(docked_ligands_target_directory, 'labels.csv'), 'r') as file:\n",
+    "    for line in file:\n",
+    "        filename = line.split(\",\")[0] + '.mol'\n",
+    "        filename = os.path.join(docked_ligands_target_directory, filename)\n",
+    "        mol = Chem.MolFromMolFile(filename, removeHs=False, sanitize=False, strictParsing=True)\n",
+    "        print(type(mol))\n",
+    "        X2.append(MACCSkeys.GenMACCSKeys(mol).ToBitString())\n",
+    "X2 = np.array([np.fromstring(s,'u1') - ord('0') for s in X2])\n",
+    "print(X2)"
    ]
   },
   {
@@ -577,6 +835,9 @@
     "    x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
     "    model.fit(x_train, y_train)\n",
     "\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.axline((0, 0), slope=1)\n",
+    "    \n",
     "    predictions = model.predict(x_train)  \n",
     "    rmse_score = rmse(y_train, predictions)\n",
     "    mae_score = mae(y_train, predictions)\n",
